[package]
name = "verdictl"
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@matilde.pet>"]
description = "Library to interact with verdi ipc"
readme = "README.md"
documentation = "https://docs.rs/verdictl"
repository = "https://github.com/verdiwm/verdictl"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
anyhow = "1.0.102"
sap = "0.2.0"
